--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
     <span>UP TODO</span>
     <h1>task management app</h1>
   </div>
-  <span class="example-spacer"></span>
+  <span class="spacer"></span>
   <button
     mat-icon-button
     class="example-icon favorite-icon"
