--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables';
+
 .container {
   display: flex;
   min-height: 100vh;
@@ -6,6 +8,10 @@
 .content {
   flex-grow: 1;
   padding: 20px;
+}
+
+#fallback {
+  color: $warn-color;
 }
 
 @media (max-width: 768px) {
