--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -1,12 +1,10 @@
 <aside>
   <mat-list>
-    <mat-list-item>Today</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>Next 7 days</mat-list-item>
-    <mat-divider></mat-divider>
-    <mat-list-item>Done</mat-list-item>
+    @for (option of options; track option.id) {
+      <app-list-item [data]="option" (update)="onUpdateOption($event)" />
+      <mat-divider></mat-divider>
+    @if(+option.id === options.length - 1) {
     <div class="spacer"></div>
-    <mat-divider></mat-divider>
-    <mat-list-item>Trash</mat-list-item>
+    } }
   </mat-list>
 </aside>
