--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import '../styles/variables';
+@import "../styles/variables";
 
 .container {
   display: flex;
@@ -8,6 +8,12 @@
 .content {
   flex-grow: 1;
   padding: 20px;
+}
+
+app-tasks {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 #fallback {
