--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,15 @@
 <mat-toolbar id="toolbar">
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with menu icon"
-  >
-    <mat-icon class="icon">menu</mat-icon>
-  </button>
+  <!-- TODO -->
+  <!-- add logo -->
   <div>
     <span>UP TODO</span>
     <h1>task management app</h1>
   </div>
   <span class="spacer"></span>
-  <button
-    mat-icon-button
-    class="example-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
+  <button mat-icon-button aria-label="Account button with icon">
     <mat-icon>account_circle</mat-icon>
   </button>
-  <button
-    mat-icon-button
-    class="example-icon"
-    aria-label="Example icon-button with share icon"
-  >
+  <button mat-icon-button aria-label="Change language button with icon">
     <mat-icon>language</mat-icon>
   </button>
 </mat-toolbar>
