feat: add creating new task

--- a/src/app/tasks/task/task.component.scss
+++ b/src/app/tasks/task/task.component.scss
@@ -2,7 +2,7 @@
 
 mat-card {
   margin-bottom: 0.7rem;
-  background-color: #ffffff;
+  background-color: $white-color;
   mat-card-content {
     time {
       display: block;
