--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 $background-color: #eaedef;
 $menu-item-color: #bacbd3;
 $main-text-color: #1b1b1b;
+$secondary-text-color: #848484;
 $warn-color: #e9c722;
 
 $tertiary: #8db2b2;
+$white-color: #ffffff;
