--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <app-sidemenu [options]="allOptions" (update)="onUpdateOption($event)" />
     <section class="content">
       @if (selectedOption) {
-      <app-tasks [tasks]="selectedTasksData" />
+      <app-tasks [tasks]="selectedTasksData" [addTask]="onAddTask" />
       } @else {
       <p id="fallback">Select an option to see tasks!</p>
       }
