--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <div class="container">
     <app-sidemenu [options]="allOptions" (update)="onUpdateOption($event)" />
     <section class="content">
-      @if (selectedOption) {
-      <app-tasks [tasks]="selectedTasksData" [addTask]="onAddTask" />
+      @if (selectedOptionId) {
+      <app-tasks [tasks]="selectedTasksData" />
       } @else {
       <p id="fallback">Select an option to see tasks!</p>
       }
