--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,16 +1,26 @@
 <mat-card appearance="outlined">
   <mat-card-content>
-    @if (task.optionId === '4') {
-    <mat-checkbox>
-      <h2 class="done">{{ task.title }}</h2>
-    </mat-checkbox>
-    } @else {
-    <mat-checkbox>
-      <h2>{{ task.title }}</h2>
-    </mat-checkbox>
+  @switch (task.optionId) {
+    @case ('3') {
+      <mat-checkbox>
+        <h2 class="done">{{ task.title }}</h2>
+      </mat-checkbox>
     }
-
-    <time>{{ task.dueDate | date : "medium" }}</time>
-    <p>{{ task.summary }}</p>
-  </mat-card-content>
+    @case ('4') {
+      <div class="trash">
+        <h2 class="done">{{ task.title }}</h2>
+        <button mat-mini-fab aria-label="Delete icon">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    }
+    @default {
+      <mat-checkbox>
+        <h2>{{ task.title }}</h2>
+      </mat-checkbox>
+    }
+  }
+  <time>{{ task.dueDate | date : "mediumDate" }}</time>
+  <p>{{ task.summary }}</p>
+</mat-card-content>
 </mat-card>
