--- a/src/app/tasks/task/task.component.scss
+++ b/src/app/tasks/task/task.component.scss
@@ -13,6 +13,17 @@ mat-card {
     }
   }
   .done {
+    color: $secondary-text-color;
+    display: inline-block;
     text-decoration: line-through;
+  }
+  .trash {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+      background-color: initial;
+      box-shadow: none;
+    }
   }
 }
